apps/generic/overlays/papra/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
spec:
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/papra-hq/papra:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /app/app-data
              subPath: configs/papra
            - name: main-volume
              mountPath: /documents
              subPath: "btsync/Carlos' Documents/"
          ports:
            - name: http
              containerPort: 1221
              protocol: TCP
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
