apps/generic/overlays/papra/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papra
spec:
  ports:
    - name: http
      port: 80
      targetPort: 1221
      protocol: TCP
